--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new-year-counter",
+  "name": "new-year-countdown",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
